# Newton-particle-simulator

./: ANSI.hpp  Makefile  NPS.cpp  NPS.hpp  NewtonPointSimulation.cpp  NewtonPointSimulation.hpp  README.md  intel-warning.sh  main.cpp  meson.build  notes_about_kompute.txt  null.d  pasimulations.hpp  testing.comp  timer.hpp  todo.txt  tools.hpp  units.hpp
include/: meson.build  pasimulations.hpp  tools.hpp  units.hpp
include/simulations/: meson.build
include/simulations/newton_point_simulation/: NewtonPointSimulation.hpp  meson.build
include/simulations/newton_point_simulation_2/: NewtonPointSimulation2.hpp  meson.build
shaders/: meson.build
shaders/NewtonPointSimulation/: meson.build
shaders/NewtonPointSimulation/double/: gpu_1_double.comp  gpu_2_double.comp  meson.build
shaders/newton_point_simulation/: meson.build
shaders/newton_point_simulation/double/: calculate_new_positions_1.comp  calculate_new_positions_2.comp  gpu_1.comp  gpu_3.comp  meson.build
shaders/newton_point_simulation/float/: calculate_new_positions_1.comp  calculate_new_positions_2.comp  calculate_new_positions_4_32.comp  calculate_new_speeds_4_32.comp  gpu_1.comp  gpu_2.comp  gpu_3.comp  gpu_4_32.comp  meson.build
src/: main.cpp  meson.build
src/simulations/: meson.build
src/simulations/newton_point_simulation/: NewtonPointSimulations.cpp  meson.build
src/simulations/newton_point_simulation_2/: NewtonPointSimulations2.cpp  meson.build
